--- a/recipe-page-main/index.css
+++ b/recipe-page-main/index.css
@@ -42,7 +42,7 @@ body{
 .border{
     border-radius: 25px;
     border: 2px solid hsl(0, 0%, 100%);
-    padding: 30px 25px 25px 25px;
+    padding: 10px 10px 10px 10px;
     width: 100%;
     height: 100%;
     background-color: hsl(0, 0%, 100%);
@@ -140,10 +140,9 @@ footer {
     color: hsl(228, 45%, 44%);
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .border{
         margin: 6rem 0 2rem 0;
-        padding: 2rem;
         border-radius: 20px;
 
     }
