--- a/recipe-page-main/index.css
+++ b/recipe-page-main/index.css
@@ -143,6 +143,7 @@ footer {
 @media screen and (min-width: 768px) {
     .border{
         margin: 6rem 0 2rem 0;
+         padding: 2rem;
         border-radius: 20px;
 
     }
