--- a/recipe-page-main/index.css
+++ b/recipe-page-main/index.css
@@ -140,11 +140,12 @@ footer {
     color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .border{
         margin: 6rem 0 2rem 0;
-         padding: 2rem;
+        padding: 2rem;
         border-radius: 20px;
+
     }
 
     h1{
