--- a/recipe-page-main/index.css
+++ b/recipe-page-main/index.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     font-family: outfit;
@@ -18,44 +20,45 @@ img{
     border-radius: 20px;
     max-width: 100%;
     height: auto;
+    display: block;
 }
 
 ul, 
 ol {
-    padding-left: 20px;
+    padding-left: 1rem;
 }
 
 body{
-    font-family: serif;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    position: relative;
     background-color:  hsl(30, 54%, 90%);
     font-family: "outfit", sans-serif;
     font-size: 16px;
-
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 
-.border{
-    border-radius: 25px;
-    border: 2px solid hsl(0, 0%, 100%);
-    padding: 30px 25px 25px 25px;
+.container-img{
     width: 100%;
-    height: 100%;
+}
+
+.border{
+    border: 2px solid hsl(0, 0%, 100%);
     background-color: hsl(0, 0%, 100%);
     align-content:center;
-    max-width: 900px;
+    max-width: 700px;
 }
 
 
 .purple{
-    border-radius: 0.5rem;
-    padding: 1.5rem;
+    border-radius: 1rem;
+    padding: 0.8rem 1rem;
     background-color: hsl(330, 100%, 98%);
     margin-top: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    
 }
 
 p,
@@ -117,6 +120,36 @@ tr {
     align-items: center;
 }
 
+.purple ul,
+.ingredients ul {
+  line-height: 1.9;
+}
+
+.purple ul li::marker,
+.instructions ol li::marker,
+.ingredients ul li::marker {
+  color: hsl(332, 51%, 32%);
+  font-weight: 600;
+}
+
+.purple ul li,
+.ingredients ul li,
+.instructions ol li {
+  padding-left: 1rem;
+}
+
+.purple span {
+  font-weight: 600;
+}
+
+
+.instructions,
+.nutrition,
+.omelette,
+.ingredients,
+.purple{
+    padding: 1rem 2rem;
+}
 .instructions{
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -128,6 +161,20 @@ tr {
     margin-bottom: 1rem;
     border-top: 1px solid hsl(30, 18%, 87%);
 }
+
+.instructions h2 {
+    font-size: 1.3rem;
+  }
+  
+  .instructions ol li {
+    margin-bottom: 1rem;
+  }
+  
+  .instructions ol li span {
+    font-weight: 600;
+  }
+  
+ 
 footer {
     padding: 3rem 1rem 0.7rem 1rem;
   }
@@ -140,10 +187,10 @@ footer {
     color: hsl(228, 45%, 44%);
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1440px) {
     .border{
         margin: 6rem 0 2rem 0;
-        padding: 2rem;
+        padding: 1.5rem;
         border-radius: 20px;
 
     }
@@ -152,7 +199,11 @@ footer {
         font-size: 40px;
     }
 
-    img{
-        border-radius: 1rem;
+    .container{
+        padding: 2rem 2rem 0 2rem;
+    }
+
+    .container img{
+        border-radius: 20px;
     }
 }
